--- a/app/views/organizations/index.html.erb
+++ b/app/views/organizations/index.html.erb
@@ -6,30 +6,27 @@
   <br>
 
   <table>
-  <tr>
-    <th>ID</th>
-    <th>Name</th>
-    <th>Short name</th>
-    <th>Url</th>
-    <th>Country</th>
-    <th>N° Prog.</th>
-    <th>N° Proj.</th>
-    <th>Sum shares</th>
-  </tr>
-  <% @organizations.each do |org| %>
-  <tr>
-    <td><%= org.id %></td>
-    <td><%= org.organization_name %></td>
-    <td><%= org.organization_short_name %></td>
-    <td><%= org.organization_url %></td>
-    <td><%= org.country %></td>
-    <td class="text-center"><%= org.num_programmes %></td>
-    <td class="text-center"><%= org.num_projects %></td>
-    <td class="text-right"><%= org.sum_shares %></td>
-  </tr>
-  <% end %>
+    <thead>
+      <tr>
+        <th>ID</th>
+        <th>Name</th>
+        <th>Short name</th>
+        <th>Url</th>
+        <th>Country</th>
+        <th>N° Prog.</th>
+        <th>N° Proj.</th>
+        <th>Sum shares</th>
+      </tr>
+    <thead>
+    <tbody id="organizations">
+      <%= render partial: "organization" %>
+    </tbody>
   <!-- ... -->
   </table>
+
+  <%= paginate @organizations, remote: true %>
+
+  <br>
 
 
   </div>
