--- a/app/assets/stylesheets/organizations.scss
+++ b/app/assets/stylesheets/organizations.scss
@@ -2,8 +2,13 @@
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: http://sass-lang.com/
 
+@import 'foundation_and_overrides';
+
 #graph-container {
-    max-width: 800px;
-    height: 800px;
+    height: 500px;
     margin: auto;
+    border: 1px solid;
+    border-color: $secondary-color;
+    background: $snow;
+    border-radius: $global-radius;
   }
