--- a/app/views/shared/_topbar.html.erb
+++ b/app/views/shared/_topbar.html.erb
@@ -14,7 +14,7 @@
         <!-- Right Nav Section -->
         <ul class="right">
           <li><a href="#">Projects</a></li>
-          <li><%= link_to "Organizations", 'organizations/index' %></li>
+          <li><%= link_to "Organizations", organizations_path %></li>
         </ul>
 
         <!-- Left Nav Section -->
