Improve Organization#show: add method to Sigma instance to evidence the links of a single node in a graph

--- a/app/assets/stylesheets/organizations.scss
+++ b/app/assets/stylesheets/organizations.scss
@@ -9,6 +9,6 @@
     margin: auto;
     border: 1px solid;
     border-color: $secondary-color;
-    background: $snow;
+    background: $vapor;
     border-radius: $global-radius;
   }
