--- a/app/views/organizations/_organization.html.erb
+++ b/app/views/organizations/_organization.html.erb
@@ -2,7 +2,7 @@
 
     <tr>
         <td><%= org.id %></td>
-        <td><%= link_to org.organization_name, organization_path(org) %></td>
+        <td><%= link_to org.organization_name, organization_show_path(org) %></td>
         <td><%= (org.organization_short_name.to_s.empty?)? "-" : org.organization_short_name %></td>
         <td><%= (org.organization_url.to_s.empty?)? "-" : link_to(org.organization_url, org.organization_url) %></td>
         <td><%= org.country %></td>
