--- a/app/views/organizations/graph.html.erb
+++ b/app/views/organizations/graph.html.erb
@@ -1,60 +1,9 @@
 <h1>Organizations#graph</h1>
 <p>Find me in app/views/organizations/graph.html.erb</p>
+<!-- <p>Pay attention. It's a test. Just load just the firs five organizations</p>
 
-<div id="graph-container"></div>
+<div class="small-12 columns">
+  <%= #render partial: "graph" %>
+</div>
 
-<script>
-    // these are just some preliminary settings
-    var g = {
-        nodes: [],
-        edges: []
-    };
-
-   // Create new Sigma instance in graph-container div (use your div name here)
-   s = new sigma({
-   graph: g,
-   container: 'graph-container',
-   renderer: {
-    container: document.getElementById('graph-container'),
-    type: 'canvas'
-   },
-   settings: {
-    minNodeSize: 8,
-    maxNodeSize: 20
-   }
-   });
-
-   // first you load a json with (important!) s parameter to refer to the sigma instance
-
-   sigma.parsers.json(
-        // '../FP7_whole_graph.json', // The complete graph -> Browser crashes!
-        'graph.json',
-        s,
-        function() {
-            // this below adds x, y attributes as well as size = degree of the node
-            var i,
-              nodes = s.graph.nodes(),
-              len = nodes.length;
-
-            for (i = 0; i < len; i++) {
-                nodes[i].x = Math.random();
-                nodes[i].y = Math.random();
-
-                nodes[i].label = nodes[i].organization_name;
-
-                nodes[i].size = s.graph.degree(nodes[i].id);
-                nodes[i].color = nodes[i].center ? '#333' : '#666';
-            }
-
-            // Refresh the display:
-            s.refresh();
-
-            // Da mettere un bottone
-            // ForceAtlas Layout
-            s.startForceAtlas2();
-            // ! IMPORTANT ! Stop force atlas
-        }
-   );
-
-
-</script>
+ -->
