Add basic projects#index

--- a/app/views/shared/_topbar.html.erb
+++ b/app/views/shared/_topbar.html.erb
@@ -13,7 +13,7 @@
       <section class="top-bar-section">
         <!-- Right Nav Section -->
         <ul class="right">
-          <li><a href="#">Projects</a></li>
+          <li><a href="#"><%= link_to "Projects", projects_path %></a></li>
           <li><%= link_to "Organizations", organizations_path %></li>
         </ul>
 
