--- a/app/views/shared/_topbar.html.erb
+++ b/app/views/shared/_topbar.html.erb
@@ -1,4 +1,4 @@
-<div class="wrapper">
+<div class="navbar-wrapper">
 <div class="row">
   <div class="small-11 small-centered columns">
     <nav class="top-bar" data-topbar role="navigation">
