1) add dataset to the root path; 2) Improve organization#show -> double click on one node retreive info about it through ajax call; 3) Minor fixies;

--- a/app/assets/stylesheets/foundation_and_overrides.scss
+++ b/app/assets/stylesheets/foundation_and_overrides.scss
@@ -975,17 +975,17 @@ $pagination-link-current-active-bg: $primary-color;
 // $include-html-panel-classes: $include-html-classes;
 
 // We use these to control the background and border styles
-// $panel-bg: scale-color($white, $lightness: -5%);
-// $panel-border-style: solid;
-// $panel-border-size: 1px;
+$panel-bg: scale-color($white, $lightness: -5%);
+$panel-border-style: solid;
+$panel-border-size: 1px;
 
 // We use this % to control how much we darken things on hover
-// $panel-function-factor: -11%;
-// $panel-border-color: scale-color($panel-bg, $lightness: $panel-function-factor);
+$panel-function-factor: -11%;
+$panel-border-color: scale-color($panel-bg, $lightness: $panel-function-factor);
 
 // We use these to set default inner padding and bottom margin
-// $panel-margin-bottom: rem-calc(20);
-// $panel-padding: rem-calc(20);
+$panel-margin-bottom: rem-calc(20);
+$panel-padding: rem-calc(20);
 
 // We use these to set default font colors
 // $panel-font-color: $oil;
@@ -1112,19 +1112,19 @@ $pagination-link-current-active-bg: $primary-color;
 // 25. Reveal
 // - - - - - - - - - - - - - - - - - - - - - - - - -
 
-// $include-html-reveal-classes: $include-html-classes;
+$include-html-reveal-classes: $include-html-classes;
 
 // We use these to control the style of the reveal overlay.
-// $reveal-overlay-bg: rgba($black, .45);
-// $reveal-overlay-bg-old: $black;
+$reveal-overlay-bg: rgba($black, .45);
+$reveal-overlay-bg-old: $black;
 
 // We use these to control the style of the modal itself.
-// $reveal-modal-bg: $white;
-// $reveal-position-top: rem-calc(100);
-// $reveal-default-width: 80%;
-// $reveal-max-width: $row-width;
-// $reveal-modal-padding: rem-calc(20);
-// $reveal-box-shadow: 0 0 10px rgba($black,.4);
+$reveal-modal-bg: $white;
+$reveal-position-top: rem-calc(100);
+$reveal-default-width: 60%;
+$reveal-max-width: $row-width;
+$reveal-modal-padding: rem-calc(20);
+$reveal-box-shadow: 0 0 10px rgba($black,.4);
 
 // We use these to style the reveal close button
 // $reveal-close-font-size: rem-calc(40);
