--- a/app/views/organizations/index.html.erb
+++ b/app/views/organizations/index.html.erb
@@ -20,7 +20,7 @@
       </tr>
     <thead>
     <tbody id="organizations">
-      <%= render partial: "organization" %>
+      <%= render partial: "organizations_table" %>
     </tbody>
   <!-- ... -->
   </table>
