--- a/app/assets/stylesheets/foundation_and_overrides.scss
+++ b/app/assets/stylesheets/foundation_and_overrides.scss
@@ -126,6 +126,7 @@ $aliceblue   : #F0F8FF;
 
 // We use these as default colors throughout
 $primary-color: #2871b4; // #008CBA
+$primary-color-darker: #1a4a75;
 $secondary-color: #e7e7e7;
 $alert-color: #f04124;
 $success-color: #43AC6A;
@@ -1410,8 +1411,8 @@ $topbar-link-hover-lightness: -10%; // Darken by 10%
 $topbar-link-bg: $topbar-bg;
 $topbar-link-bg-hover: $oil;
 $topbar-link-bg-color-hover: $charcoal;
-$topbar-link-bg-active: $primary-color;
-$topbar-link-bg-active-hover: scale-color($primary-color, $lightness: -14%);
+$topbar-link-bg-active: $primary-color-darker;
+$topbar-link-bg-active-hover: $oil; //scale-color($primary-color, $lightness: -14%);
 $topbar-link-font-family: $body-font-family;
 $topbar-link-text-transform: none;
 $topbar-link-padding: ($topbar-height / 3);
