--- a/app/views/homepage/index.html.erb
+++ b/app/views/homepage/index.html.erb
@@ -1,4 +1,7 @@
-<h1>Homepage#index</h1>
-<h3 class="subheader">Find me in app/views/homepage/index.html.erb</h3>
-
-
+<div class="row">
+  <div class="small-11 small-centered columns">
+  <br>
+  <h1>FP7 Dataviz project</h1>
+  <h2 class="subheader">Work in progress.</h2>
+  </div>
+</div>
