--- a/app/views/shared/_topbar.html.erb
+++ b/app/views/shared/_topbar.html.erb
@@ -13,8 +13,9 @@
       <section class="top-bar-section">
         <!-- Right Nav Section -->
         <ul class="right">
-          <li><a href="#"><%= link_to "Projects", projects_path %></a></li>
+          <li><%= link_to "Projects", projects_path %></li>
           <li><%= link_to "Organizations", organizations_path %></li>
+          <li class="active"><a href="#"><%= link_to "FP7 Graph", "/fp7-graph/index.html" %></a></li>
         </ul>
 
         <!-- Left Nav Section -->
