--- a/app/views/shared/_footer.html.erb
+++ b/app/views/shared/_footer.html.erb
@@ -2,6 +2,6 @@
 
 <script>
   // footer on the bottom
-  $('.footer-wrapper').css('margin-top',$(document).height() - ($('.navbar-wrapper').height() + $('#content').height() -20) - $('.footer-wrapper').height());
+  $('.footer-wrapper').css('margin-top',$(document).height() - ($('.navbar-wrapper').height() + $('#content').height()) - $('.footer-wrapper').height());
 
 </script>
