--- a/app/views/homepage/index.html.erb
+++ b/app/views/homepage/index.html.erb
@@ -1,7 +1,8 @@
 <div class="row">
   <div class="small-11 small-centered columns">
-  <br>
-  <h1>FP7 Dataviz project</h1>
-  <h2 class="subheader">Work in progress.</h2>
+    <br>
+    <h1>FP7 Dataviz project</h1>
+    <h2 class="subheader">Work in progress.</h2>
+    <h4 class="subheader">For more info about this project see <a href="https://github.com/spaghetti-open-data/fp7-funding-network-analysis/wiki">Spaghetti Open Data's repo on github</a></h4>
   </div>
 </div>
