--- a/app/views/organizations/_graph.html.erb
+++ b/app/views/organizations/_graph.html.erb
@@ -1,5 +1,11 @@
+<blockquote>
+<div>Double-click on a node to retrieve its neighbors</div>
+<div>Right-click on a node to retrieve more information about it</div>
+</blockquote>
 
 <div id="graph-container"></div>
+
+<br/>
 
 <div id="organizationModal" class="reveal-modal" data-reveal aria-labelledby="modalTitle" aria-hidden="true" role="dialog">
   <%= render partial: "organization_info" %>
